--- a/pages/classes/week/week.wxml
+++ b/pages/classes/week/week.wxml
@@ -1,16 +1,14 @@
 <!--pages/classes/week/week.wxml-->
 
-
-<!-- <view class="weui-cells weui-cells_after-title"> -->
-  <radio-group bindchange="radioChange">
-    <label class="weui-cell weui-check__label" wx:for="{{week_list}}" wx:key="value">
-      <radio class="weui-check" value="{{item.value}}" checked="{{item.checked}}" />
-
-      <view class="weui-cell__bd">{{item.name}}</view>
-      <view class="weui-cell__ft weui-cell__ft_in-radio" wx:if="{{item.checked}}">
-        <icon class="weui-icon-radio" type="success_no_circle" size="16"></icon>
-      </view>
-    </label>
-  </radio-group>
-
-<!-- </view> -->
+<view class="weui-cells weui-cells_after-title">
+  <view class="weui-cell weui-cell_select">
+    <view class="weui-cell__hd weui-cell__hd_in-select-after">
+      <view class="weui-label">学期</view>
+    </view>
+    <view class="weui-cell__bd">
+      <picker bindchange="" value="{{semesterIndex}}" range="{{semester}}">
+        <view class="weui-select weui-select_in-select-after">{{semester[semesterIndex]}}</view>
+      </picker>
+    </view>
+  </view>
+</view>
