--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -24,16 +24,16 @@
             <view class="weui-cell weui-cell_access">
               <view class="weui-cell__bd">当前学年</view>
               <view class="weui-cell__bd">
-                <picker mode="selector" bindchange="year_picker_change" value="{{year_index}}" range="{{year_picker}}">
-                  <view class="weui-cell__ft weui-cell__ft_in-access">{{year_picker[year_index]}}</view>
+                <picker mode="selector" bindchange="year_picker_change" value="{{years.year_index}}" range="{{years.year_picker}}">
+                  <view class="weui-cell__ft weui-cell__ft_in-access">{{years.year_picker[years.year_index]}}</view>
                 </picker>
               </view>
             </view>
             <view class="weui-cell weui-cell_access">
               <view class="weui-cell__bd">当前学期</view>
               <view class="weui-cell__bd">
-                <picker mode="selector" bindchange="semester_picker_change" value="{{semester_index}}" range="{{semester_picker}}">
-                  <view class="weui-cell__ft weui-cell__ft_in-access">{{semester_picker[semester_index]}}</view>
+                <picker mode="selector" bindchange="semester_picker_change" value="{{semester.semester_index-1}}" range="{{semester.semester_picker}}">
+                  <view class="weui-cell__ft weui-cell__ft_in-access">{{semester.semester_picker[semester.semester_index-1]}}</view>
                 </picker>
               </view>
             </view>
