--- a/pages/classes/setting/setting.wxml
+++ b/pages/classes/setting/setting.wxml
@@ -3,6 +3,18 @@
 <view class="weui-cells__title">选择学期</view>
 
 <view class="weui-cell weui-cell_select">
+
+  <view class="weui-cell__hd weui-cell__hd_in-select-after">
+    <view class="weui-label">当前学年</view>
+  </view>
+  <view class="weui-cell__bd">
+    <picker bindchange="bindYearsChange" value="{{years.year_index-1}}" range="{{years.year_picker}}">
+      <view class="weui-select weui-select_in-select-after">{{years.year_picker[years.year_index-1]}}</view>
+    </picker>
+  </view>
+</view>
+<view class="weui-cell weui-cell_select">
+
   <view class="weui-cell__hd weui-cell__hd_in-select-after">
     <view class="weui-label">当前学期</view>
   </view>
@@ -17,7 +29,7 @@
 
 
 <view class="week-select page__bd page__bd_spacing">
-  <slider show-value value="1" min="1" max="20" activeColor="#2d8cf0" />
+  <slider show-value value="{{week}}" min="1" max="20" activeColor="#2d8cf0" bindchange="bindWeekChange" />
 </view>
 
-<button class="setting-button weui-btn" hover-class="setting-button-hover">确定</button>
+<button bindtap="setting" class="setting-button weui-btn" hover-class="setting-button-hover">确定</button>
