--- a/pages/classes/classes.wxss
+++ b/pages/classes/classes.wxss
@@ -6,8 +6,9 @@
   background-size: 100% 100%;
   opacity: 0.5
 } */
-.week_selector{
-  padding: 40px 0
+
+.week_selector {
+  padding: 40px 0;
 }
 
 .table-grid {
@@ -28,9 +29,10 @@
 .cell {
   display: block;
   text-align: center;
-  color: #2d8cf088;
+  color: #2d8cf0;
   font-size: 38rpx;
   line-height: 37rpx;
+  opacity:0.7
 }
 
 .week {
@@ -46,13 +48,14 @@
   height: 300px;
   z-index: 1;
 }
-.class-cell{
+
+.class-cell {
   display: flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-size: 20rpx;
   text-align: center;
   color: #fff;
+  opacity:0.7
 }
-
