--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -57,5 +57,16 @@
         </view>
       </view>
     </view>
+    <view class="weui-media-box weui-media-box_small-appmsg">
+      <view class="option-item weui-cells weui-cells_in-small-appmsg">
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+          <view class="weui-cell__bd weui-cell_primary">
+            <button hover-class='weui-cell_active' open-type="contact" >问题反馈</button>
+          </view>
+          <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </view>
+      </view>
+    </view>
   </view>
+
 </view>
