--- a/pages/classes/detail/detail.wxml
+++ b/pages/classes/detail/detail.wxml
@@ -1,5 +1,6 @@
 <!--pages/classes/detail/detail.wxml-->
 <view class="weui-panel">
+  <view class="weui-panel__hd">课程信息</view>
   <view class="weui-panel__bd">
     <view class="weui-media-box weui-media-box_small-appmsg">
       <view class="weui-cells weui-cells_in-small-appmsg">
@@ -81,6 +82,19 @@
           </view>
           <!-- <view class="weui-cell__ft weui-cell__ft_in-access"></view> -->
         </view>
+
+        <view class="weui-panel__hd">其他</view>
+        <navigator url="{{'/pages/classes/classmate/classmate?class_id='+lesson.id}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+          <view class="weui-cell__hd">
+            <image src="{{icon20}}" style="width: 20px;height: 20px;margin-right: 5px" />
+          </view>
+          <view class="weui-cell__bd weui-cell_primary">
+            <view>
+              <text class='item-key'>同班同学</text>
+            </view>
+          </view>
+          <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </navigator>
       </view>
     </view>
   </view>
