更新信息改存储在服务端

--- a/pages/classes/classmate/classmate.wxml
+++ b/pages/classes/classmate/classmate.wxml
@@ -1,8 +1,23 @@
 <!--pages/classes/classmate/classmate.wxml-->
-<view class="weui-panel weui-panel_access">
-  <view class="weui-panel__hd">同班同学</view>
-  <view class="weui-panel__bd">
-    <block wx:for="{{class_info.student}}" wx:key="{{index}}">
+<view hidden="{{!showSearch}}">
+  <view class="weui-search-bar">
+    <view class="weui-search-bar__form">
+      <view class="weui-search-bar__box">
+        <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+        <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" />
+        <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
+          <icon type="clear" size="14"></icon>
+        </view>
+      </view>
+      <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
+        <icon class="weui-icon-search" type="search" size="14"></icon>
+        <view class="weui-search-bar__text">搜索</view>
+      </label>
+    </view>
+    <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
+  </view>
+  <view class="weui-cells searchbar-result" wx:if="{{inputVal.length > 0}}">
+    <block wx:for="{{searchList}}" wx:key="{{index}}">
       <view class="weui-media-box weui-media-box_text">
         <view class="weui-media-box__title weui-media-box__title_in-text">{{item.name}}</view>
         <view class="weui-media-box__desc">{{item.number}} </view>
@@ -11,3 +26,20 @@
     </block>
   </view>
 </view>
+
+<scroll-view style='height:98vh' bindscrolltoupper="scrolltoupper" bindscroll="scroll" scroll-y="true" enable-back-to-top>
+
+  <view class="weui-panel weui-panel_access">
+    <view class="weui-panel__hd">同班同学</view>
+    <view class="weui-panel__bd">
+      <block wx:for="{{class_info.student}}" wx:key="{{index}}">
+        <view id="{{index}}" class="weui-media-box weui-media-box_text">
+          <view class="weui-media-box__title weui-media-box__title_in-text">{{item.name}}</view>
+          <view class="weui-media-box__desc">{{item.number}} </view>
+          <view class="weui-media-box__desc">{{item.major}}</view>
+        </view>
+      </block>
+    </view>
+  </view>
+
+</scroll-view>
