--- a/pages/me/more/more.wxml
+++ b/pages/me/more/more.wxml
@@ -22,6 +22,17 @@
     </view>
   </view>
 </view>
+ <view wx:if="{{showNotify}}" class="weui-media-box weui-media-box_small-appmsg">
+    <view class="option-item weui-cells weui-cells_in-small-appmsg">
+
+      <navigator url="/pages/me/more/notify_rule/notify_rule" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd weui-cell_primary">
+          <view>使用说明</view>
+        </view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </navigator>
+    </view>
+  </view>
 <view wx:if="{{showNotify}}" class="weui-media-box weui-media-box_small-appmsg">
   <view class="option-item weui-cells weui-cells_in-small-appmsg">
     <navigator url="/pages/me/more/notify_setting/notify_setting" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
@@ -36,9 +47,9 @@
   <view class="option-item weui-cells weui-cells_in-small-appmsg">
     <view bindtap='goClickPage' class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__bd weui-cell_primary">
-        <view>点我hhh</view>
+        <view>提醒次数</view>
       </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access">测试中</view>
+      <view class="weui-cell__ft weui-cell__ft_in-access">{{notify_num}}</view>
     </view>
   </view>
 </view>
