--- a/pages/classes/detail/detail.wxml
+++ b/pages/classes/detail/detail.wxml
@@ -19,7 +19,7 @@
           <!-- <view class="weui-cell__ft weui-cell__ft_in-access"></view> -->
         </view>
 
-        <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view wx:if='{{lesson.from_credit_system}}' class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__hd">
             <image src="{{icon20}}" style="width: 20px;height: 20px;margin-right: 5px" />
           </view>
@@ -31,7 +31,7 @@
           </view>
           <!-- <view class="weui-cell__ft weui-cell__ft_in-access"></view> -->
         </view>
-        <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view wx:if='{{lesson.teacher}}' class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__hd">
             <image src="{{icon20}}" style="width: 20px;height: 20px;margin-right: 5px" />
           </view>
@@ -44,7 +44,7 @@
           <!-- <view class="weui-cell__ft weui-cell__ft_in-access"></view> -->
         </view>
 
-        <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view wx:if='{{lesson.room}}' class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__hd">
             <image src="{{icon20}}" style="width: 20px;height: 20px;margin-right: 5px" />
           </view>
@@ -57,7 +57,7 @@
           <!-- <view class="weui-cell__ft weui-cell__ft_in-access"></view> -->
         </view>
 
-        <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view wx:if='{{lesson.credit}}' class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__hd">
             <image src="{{icon20}}" style="width: 20px;height: 20px;margin-right: 5px" />
           </view>
@@ -84,7 +84,7 @@
         </view>
 
         <view class="weui-panel__hd">其他</view>
-        <navigator url="{{'/pages/classes/classmate/classmate?class_id='+lesson.id}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <navigator wx:if='{{lesson.from_credit_system}}' url="{{'/pages/classes/classmate/classmate?class_id='+lesson.id}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__hd">
             <image src="{{icon20}}" style="width: 20px;height: 20px;margin-right: 5px" />
           </view>
@@ -95,6 +95,18 @@
           </view>
           <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </navigator>
+
+          <view wx:if='{{!lesson.from_credit_system}}' bindtap='deleteClass' data-id='{{lesson.id}}' class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+          <view class="weui-cell__hd">
+            <image src="{{icon20}}" style="width: 20px;height: 20px;margin-right: 5px" />
+          </view>
+          <view class="weui-cell__bd weui-cell_primary">
+            <view>
+              <text class='item-key'>删除课程</text>
+            </view>
+          </view>
+          <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+        </view>
       </view>
     </view>
   </view>
