--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -16,7 +16,7 @@
         <view class="option-item weui-cells weui-cells_in-small-appmsg">
 
           <view bindtap="bindAccount" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">当前用户</view>
+            <view class="weui-cell__bd">个人信息</view>
             <view class="weui-cell__ft">{{account}}</view>
           </view>
 
@@ -63,8 +63,8 @@
           <view class="weui-cell__bd weui-cell_primary">
             <button hover-class='weui-cell_active' open-type="contact">问题反馈</button>
           </view>
-           <view class="weui-badge weui-badge_dot" style="margin-left: 5px;margin-right: 5px;"></view>
-          <view class="weui-cell__ft weui-cell__ft_in-access"></view> 
+          <view class="weui-badge weui-badge_dot" style="margin-left: 5px;margin-right: 5px;"></view>
+          <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
       </view>
     </view>
@@ -76,7 +76,7 @@
             <view class="weui-cell__bd weui-cell_primary">
               <view>其他功能</view>
             </view>
-
+            <view hidden='{{notice.other.length===0}}' class="weui-badge weui-badge_dot" style="margin-left: 5px;margin-right: 5px;"></view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
           </navigator>
         </view>
