--- a/pages/me/more/more.wxml
+++ b/pages/me/more/more.wxml
@@ -11,6 +11,17 @@
       </navigator>
     </view>
   </view>
+
+  <view class="weui-media-box weui-media-box_small-appmsg">
+    <view bindtap='admire' class="option-item weui-cells weui-cells_in-small-appmsg">
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd weui-cell_primary">
+          <view>膜拜大佬</view>
+        </view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </view>
+    </view>
+  </view>
 </view>
 
 <view class="weui-cells__title">测试功能</view>
@@ -22,17 +33,18 @@
     </view>
   </view>
 </view>
- <view wx:if="{{showNotify}}" class="weui-media-box weui-media-box_small-appmsg">
-    <view class="option-item weui-cells weui-cells_in-small-appmsg">
+<view wx:if="{{showNotify}}" class="weui-media-box weui-media-box_small-appmsg">
+  <view class="option-item weui-cells weui-cells_in-small-appmsg">
 
-      <navigator url="/pages/me/more/notify_rule/notify_rule" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__bd weui-cell_primary">
-          <view>使用说明</view>
-        </view>
-        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-      </navigator>
-    </view>
+    <navigator bindtap='classes_notify_use_click' url="/pages/me/more/notify_rule/notify_rule" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell__bd weui-cell_primary">
+        <view>使用说明</view>
+      </view>
+      <view hidden='{{!!notice.other.classes_notify_use}}' class="weui-badge weui-badge_dot" style="margin-left: 5px;margin-right: 5px;"></view>
+      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+    </navigator>
   </view>
+</view>
 <view wx:if="{{showNotify}}" class="weui-media-box weui-media-box_small-appmsg">
   <view class="option-item weui-cells weui-cells_in-small-appmsg">
     <navigator url="/pages/me/more/notify_setting/notify_setting" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
